Issue#743 - Dark Mode (without palette changes)

--- a/src/App.scss
+++ b/src/App.scss
@@ -172,6 +172,51 @@ body {
   -webkit-touch-callout: none;
 }
 
+.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.25s ease-out;
+}
+
+.dark-mode {
+  background-color: #161625;
+  color: #bdbdbd;
+  transition: background-color 0.25s ease-out;
+}
+
+.switch { 
+  position : relative ;
+  display : inline-block;
+  width : 40px;
+  height : 20px;
+  background-color: #ccc;
+  border-radius: 20px;
+}
+
+.switch::after {
+  content: '';
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: white;
+  top: 1px;
+  left: 1px;
+  transition: all 0.3s;
+}
+
+.checkbox:checked + .switch::after {
+  left : 20px; 
+}
+
+.checkbox:checked + .switch {
+  background-color: #7983ff;
+}
+
+.checkbox { 
+   display : none;
+}
+
 h1 {
   font-family: 'archia';
   font-size: 24px !important;
